# tensorflow-haskell-deptyped

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.BSD.txt  README.md  stack.yaml  tensorflow-deptyped.cabal  tensorflow-haskell-deptyped.cabal
executable/: Main.hs  tf-haskell-example.hs
tensorflow-deptyped-examples/: README.md  tensorflow-deptyped-examples.cabal
tensorflow-deptyped-examples/app/checking-shapes/: LICENSE.Apache.txt  Main.hs
tensorflow-deptyped-examples/app/tf-example/: LICENSE  Main.hs
tensorflow-mnist-deptyped/: tensorflow-mnist-deptyped.cabal
tensorflow-mnist-deptyped/app/: Main.hs
tensorflow-mnist-deptyped/src-data/TensorFlow/Examples/MNIST/: TrainedGraph.hs
tensorflow-mnist-deptyped/src/TensorFlow/Examples/MNISTDeptyped/: Parse.hs
tests/: Main.hs  NN.hs
