name:           tensorflow-deptyped
version:        0.0.1
synopsis:       Reexporting TensorFlow Haskell with dependent typed functions
description:    Securing tensorflow code using dependent types.
category:       Machine Learning
homepage:       https://github.com/helq/tensorflow-haskell-deptyped#readme
bug-reports:    https://github.com/helq/tensorflow-haskell-deptyped/issues
maintainer:     Elkin Cruz
-- It's sad that I cannot put a dual license in here :/
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    CHANGELOG.md
    LICENSE.BSD.txt
    LICENSE.Apache.txt
    README.md
    stack.yaml

source-repository head
  type: git
  location: https://github.com/helq/tensorflow-haskell-deptyped

library
  hs-source-dirs:
      library
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  build-depends:
      base >= 4.9 && < 5
    , tensorflow >= 0.2.0.0 && < 0.3
    , tensorflow-ops >= 0.2.0.0 && < 0.3
    , tensorflow-core-ops >= 0.2.0.0 && < 0.3
    , singletons >= 2.5 && < 2.6
    , vector
    , vector-sized
    , bytestring
  exposed-modules:
      TensorFlow.DepTyped
    , TensorFlow.DepTyped.Base
    , TensorFlow.DepTyped.Tensor
    , TensorFlow.DepTyped.Types
    , TensorFlow.DepTyped.Session
    , TensorFlow.DepTyped.NN
    , TensorFlow.DepTyped.Ops
    , TensorFlow.DepTyped.Output
    , TensorFlow.DepTyped.Variable
    , TensorFlow.DepTyped.Minimize
  default-language: Haskell2010

executable tensorflow-haskell-deptyped
  main-is: Main.hs
  hs-source-dirs:
      executable
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base >= 4.9 && < 5
    , tensorflow-deptyped
    , bytestring
    , vector
    , vector-sized
    , singletons >= 2.5 && < 2.6
    , tensorflow
    , tensorflow-ops
  default-language: Haskell2010

executable tf-example
  main-is: tf-haskell-example.hs
  hs-source-dirs: executable
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base >= 4.9 && < 5
    , tensorflow-deptyped
    , random
    , HUnit
    , tensorflow
    , tensorflow-core-ops
    , tensorflow-ops
    , vector-sized

--test-suite tensorflow-haskell-deptyped-test-suite
--  type: exitcode-stdio-1.0
--  main-is: Main.hs
--  hs-source-dirs:
--      test-suite
--  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
--  build-depends:
--      base
--    , tensorflow-haskell-deptyped
--    , tasty
--    , tasty-hspec
--  default-language: Haskell2010

--benchmark tensorflow-haskell-deptyped-benchmarks
--  type: exitcode-stdio-1.0
--  main-is: Main.hs
--  hs-source-dirs:
--      benchmark
--  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
--  build-depends:
--      base
--    , tensorflow-haskell-deptyped
--    , criterion
--  default-language: Haskell2010
